--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -24,6 +24,12 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      # Sets up Node.js 20.x
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20.x
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
