--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -19,17 +19,21 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+    # Set up the Node.js version in the job environment
+    env:
+      NODE_VERSION: 20.x
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
-      # Sets up Node.js 20.x
+      # Sets up Node.js using the specified version
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 20.x
+          node-version: ${{ env.NODE_VERSION }}
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
