--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -44,3 +44,24 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+      - name: Create GitHub Issue for each commit
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const commits = context.payload.commits;
+            for (const commit of commits) {
+              const title = `New Commit by ${commit.author.name}`;
+              const body = `A new commit was pushed:\n\n` +
+                           `**Message:** ${commit.message}\n` +
+                           `**Author:** ${commit.author.name} (${commit.author.email})\n` +
+                           `**URL:** ${commit.url}`;
+
+              await github.rest.issues.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: title,
+                body: body,
+              });
+            }
